# Hyperliquid-Supurr-Bot

./: .dockerignore  .gitignore  BOT_353_DCA_READONLY_DEBUG_SNAPSHOT_2026-04-16.md  Cargo.toml  Cross.toml  DCA_TP_REPLACEMENT_PLAN.md  Dockerfile  OUTCOME_CONTEXT.md  OrderReconciliation.md  README.md  config-grid.example.json  config.example.json  sharpeGuard.md
.agent/skills/: backward-compatibility-check.md  debug.md
.cargo/: config.toml
.github/workflows/: ci.yml
configs/: rsi-paper-config.json
crates/bot-cli/: Cargo.toml
crates/bot-cli/src/: config.rs  lib.rs  main.rs  main.rs.bak  main.rs.bak2  main.rs.bak3
crates/bot-core/: Cargo.toml
crates/bot-core/src/: commands.rs  events.rs  exchange.rs  lib.rs  market.rs  strategy.rs  types.rs
crates/bot-engine/: Cargo.toml  backtest-worker.js  demo.html  grid_demo.html  index.html
crates/bot-engine/scripts/: generate_prices.py
crates/bot-engine/src/: account_syncer.rs  compat.rs  config.rs  context.rs  engine.rs  inventory.rs  lib.rs  order_manager.rs  performance_metrics.rs  poll_guard.rs  runner.rs  sync_traits.rs  trade_syncer.rs  wasm_api.rs
crates/bot-engine/src/simulation/: account.rs  mod.rs
crates/bot-engine/src/testing/: fill_simulator.rs  mock_exchange.rs  mock_syncer.rs  mod.rs  paper_exchange.rs  quote_source.rs
crates/exchange-hyperliquid/: Cargo.toml
crates/exchange-hyperliquid/src/: client.rs  lib.rs  signing.rs  types.rs
crates/strategy-arbitrage/: Cargo.toml
crates/strategy-arbitrage/src/: config.rs  lib.rs  strategy.rs
crates/strategy-arbitrage/tests/: arb_integration_test.rs  arb_paper_test.rs
crates/strategy-dca/: Cargo.toml
crates/strategy-dca/src/: config.rs  lib.rs  state.rs  strategy.rs
crates/strategy-dca/tests/: dca_simulation_test.rs
crates/strategy-grid/: Cargo.toml
crates/strategy-grid/src/: config.rs  lib.rs  liquidation_tests.rs  state.rs  strategy.rs
crates/strategy-grid/tests/: grid_comprehensive_test.rs  grid_paper_test.rs  grid_simulation_test.rs  grid_trailing_test.rs  grid_unified_test.rs  grid_wasm_parity_test.rs
crates/strategy-market-maker/: Cargo.toml
crates/strategy-market-maker/src/: config.rs  lib.rs  state.rs  strategy.rs
crates/strategy-regime-classifier/: Cargo.toml
crates/strategy-regime-classifier/src/: adx.rs  bar_ext.rs  classifier.rs  lib.rs
crates/strategy-rsi/: Cargo.toml
crates/strategy-rsi/src/: bar.rs  config.rs  indicator.rs  lib.rs  state.rs  strategy.rs
crates/strategy-tick-trader/: Cargo.toml
crates/strategy-tick-trader/src/: config.rs  lib.rs  state.rs  strategy.rs
schemas/: bot-config.schema.json
