[package]
name = "exchange-hyperliquid"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Hyperliquid exchange adapter (HTTP-only)"

[dependencies]
bot-core = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
hex = { workspace = true }
sha3 = { workspace = true }
ethers-core = { workspace = true }
ethers-signers = { workspace = true }
rmp-serde = "1.3"
k256 = { version = "0.13", features = ["ecdsa"] }

