[package]
name = "strategy-regime-classifier"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Market regime classifier using ADX, ATR, and Bollinger Width indicators"

[dependencies]
ta = "0.5"

[dev-dependencies]

